<resources>
    <string name="app_name">HelperApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="your_name">Your name</string>
    <string name="finish">Finish</string>
    <string name="already_had_an_account_login_here">Already had an account! Login here.</string>
    <string name="email">Email</string>
</resources>