<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newback"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="0dp"
        app:srcCompat="@drawable/register"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <EditText
        android:id="@+id/editTextName"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:drawableStart="@drawable/ic_baseline_people_alt_24"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:background="#fff"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:autofillHints="" />
    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:drawableStart="@drawable/ic_baseline_people_alt_24"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:background="#fff"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/editTextName"
        android:layout_centerHorizontal="true"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="60dp"
        android:background="#fff"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/editTextUserName"
        android:autofillHints="" />
    <EditText
        android:id="@+id/editTextRePass"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="60dp"
        android:background="#fff"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/editTextPass"
        android:autofillHints="" />
    <TextView
        android:id="@+id/textViewRegErr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_alignTop="@+id/editTextRePass"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"/>
    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:id="@+id/cardViewDone"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/editTextRePass"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/finish"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/textView_hasAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/cardViewDone"
        android:text="@string/already_had_an_account_login_here"
        android:textColor="#fff"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/progressBarReg"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/cardViewDone"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />


</RelativeLayout>